# python-boilerplate-llm

./: .clinerules  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
