[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-boilerplate-llm"
version = "0.1.0"
description = "Python project boilerplate for LLM-based development"
requires-python = ">=3.8"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["find:"]

[tool.setuptools.find]
where = ["src"]